--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,33 +1,162 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+body,html {
+    margin: 0;
+    padding: 0;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+* {
+    box-sizing: border-box;
+}
+
+.flex{
+    display: flex;
+}
+
+.flex-col {
+    flex-direction: column;
+}
+
+.justify-between {
+    justify-content: space-between;
+}
+
+.justify-center {
+    justify-content: center;
+}
+
+.items-center {
+    align-items: center;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.gap-4{
+    gap: 1rem; /* 16px */
+}
+
+.p-8 {
+    padding: 2rem; /* 16px */
+}
+
+.py-3 {
+    padding-top: 0.75rem; /* 12px */
+    padding-bottom: 0.75rem; /* 12px */
+}
+
+.py-4 {
+    padding-top: 1rem; /* 16px */
+    padding-bottom: 1rem; /* 16px */
+}
+
+.py-6 {
+    padding-top: 1.5rem; /* 24px */
+    padding-bottom: 1.5rem; /* 24px */
+}
+
+.px-4 {
+    padding-top: 1rem; /* 16px */
+    padding-bottom: 1rem; /* 16px */
+}
+
+.px-8 {
+    padding-left: 2rem; /* 32px */
+    padding-right: 2rem; /* 32px */
+}
+
+.mb-4 {
+    margin-bottom: 1rem ; /* 16px */
+}
+
+.space-x-4 {
+    margin-left: 1rem; /* 16px */
+}
+
+.space-x-2 {
+    margin-top: 0.5rem; /* 8px */
+}
+
+.space-y-2 {
+    margin-top: 0.5rem; /* 8px */
+}
+
+.max-w-xs {
+    max-width: 20rem; /* 320px */
+}
+
+.bg-amber-700 {
+    background-color: rgb(180 83 9);
+}
+
+
+.bg-slate-100	{
+    background-color: rgb(241 245 249);
+}
+
+.backdrop {
+    background-color: rgba(0,0,0,0.5);
   }
+
+.border-gray-400 {
+    border-color: rgb(156 163 175);
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.border-b-amber-700 {
+    border-bottom-color: rgb(180 83 9);
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.rounded-md	{
+    border-radius: 0.375rem; /* 6px */
+}
+
+.rounded-lg {
+    border-radius: 0.5rem; /* 8px */
+}
+
+.border {
+    border-width: 1px;
+}
+
+.border-b-2 { 
+    border-bottom: solid;
+}
+
+.border-none {
+    border-style: none;
+}
+
+.h-screen {
+    height: 100vh;
+}
+
+.hover\:brightness-95:hover {
+    filter: brightness(.80);
+}
+
+.overflow-y-hidden {
+    overscroll-behavior: none;
+}
+
+.font-semibold {
+    font-weight: 600;
+}
+
+.fixed {
+    position: fixed;
+}
+
+.absolute {
+
+}
+
+.inset-0 {
+    inset: 0px;
+}
+
+.w-full {
+    width: 100%;
+}
+
+.max-w-xl {
+    max-width: 36rem; /* 576px */;
 }
