--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,162 +1,237 @@
-body,html {
-    margin: 0;
-    padding: 0;
+body,
+html {
+  margin: 0;
+  padding: 0;
 }
 
 * {
-    box-sizing: border-box;
-}
-
-.flex{
-    display: flex;
-}
-
-.flex-col {
-    flex-direction: column;
-}
-
-.justify-between {
-    justify-content: space-between;
-}
-
-.justify-center {
-    justify-content: center;
-}
-
-.items-center {
-    align-items: center;
-}
-
-.text-center {
-    text-align: center;
-}
-
-.gap-4{
-    gap: 1rem; /* 16px */
-}
-
-.p-8 {
-    padding: 2rem; /* 16px */
-}
-
-.py-3 {
-    padding-top: 0.75rem; /* 12px */
-    padding-bottom: 0.75rem; /* 12px */
-}
-
-.py-4 {
-    padding-top: 1rem; /* 16px */
-    padding-bottom: 1rem; /* 16px */
-}
-
-.py-6 {
-    padding-top: 1.5rem; /* 24px */
-    padding-bottom: 1.5rem; /* 24px */
-}
-
-.px-4 {
-    padding-top: 1rem; /* 16px */
-    padding-bottom: 1rem; /* 16px */
-}
-
-.px-8 {
-    padding-left: 2rem; /* 32px */
-    padding-right: 2rem; /* 32px */
-}
-
-.mb-4 {
-    margin-bottom: 1rem ; /* 16px */
-}
-
-.space-x-4 {
-    margin-left: 1rem; /* 16px */
-}
-
-.space-x-2 {
-    margin-top: 0.5rem; /* 8px */
-}
-
-.space-y-2 {
-    margin-top: 0.5rem; /* 8px */
-}
-
-.max-w-xs {
-    max-width: 20rem; /* 320px */
-}
-
-.bg-amber-700 {
-    background-color: rgb(180 83 9);
-}
-
-
-.bg-slate-100	{
-    background-color: rgb(241 245 249);
-}
-
-.backdrop {
-    background-color: rgba(0,0,0,0.5);
-  }
-
-.border-gray-400 {
-    border-color: rgb(156 163 175);
-}
-
-.border-b-amber-700 {
-    border-bottom-color: rgb(180 83 9);
-}
-
-.rounded-md	{
-    border-radius: 0.375rem; /* 6px */
-}
-
-.rounded-lg {
-    border-radius: 0.5rem; /* 8px */
-}
-
-.border {
-    border-width: 1px;
-}
-
-.border-b-2 { 
-    border-bottom: solid;
-}
-
-.border-none {
-    border-style: none;
-}
-
-.h-screen {
-    height: 100vh;
-}
-
-.hover\:brightness-95:hover {
-    filter: brightness(.80);
-}
-
-.overflow-y-hidden {
-    overscroll-behavior: none;
-}
-
-.font-semibold {
-    font-weight: 600;
-}
-
-.fixed {
-    position: fixed;
+  box-sizing: border-box;
 }
 
 .absolute {
+  position: absolute;
+}
 
+.flex {
+  display: flex;
+}
+
+.flex-col {
+  flex-direction: column;
+}
+
+.justify-between {
+  justify-content: space-between;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.gap-4 {
+  gap: 1rem; /* 16px */
+}
+
+.p-0 {
+  padding: 0rem;
+}
+
+.p-8 {
+  padding: 2rem; /* 16px */
+}
+
+.pt-16 {
+  padding-top: 4rem; /* 64px */
+}
+
+.py-3 {
+  padding-top: 0.75rem; /* 12px */
+  padding-bottom: 0.75rem; /* 12px */
+}
+
+.py-4 {
+  padding-top: 1rem; /* 16px */
+  padding-bottom: 1rem; /* 16px */
+}
+
+.py-6 {
+  padding-top: 1.5rem; /* 24px */
+  padding-bottom: 1.5rem; /* 24px */
+}
+
+.px-4 {
+  padding-left: 1rem; /* 16px */
+  padding-right: 1rem; /* 16px */
+}
+
+.px-5 {
+  padding-left: 1.25rem; /* 20px */
+  padding-right: 1.25rem; /* 20px */
+}
+
+.px-8 {
+  padding-left: 2rem; /* 32px */
+  padding-right: 2rem; /* 32px */
+}
+.m-0 {
+  margin: 0px;
+}
+.mb-4 {
+  margin-bottom: 1rem; /* 16px */
+}
+
+.m-4 {
+  margin: 1rem; /* 16px */
+}
+
+.space-x-4 {
+  margin-left: 1rem; /* 16px */
+}
+
+.space-x-2 {
+  margin-top: 0.5rem; /* 8px */
+}
+
+.space-y-2 {
+  margin-top: 0.5rem; /* 8px */
+}
+
+.max-w-xs {
+  max-width: 20rem; /* 320px */
+}
+
+.bg-amber-700 {
+  background-color: rgb(180 83 9);
+}
+
+.bg-amber-100 {
+  background-color: rgba(246, 226, 199, 0.834);
+}
+
+.bg-slate-100 {
+  background-color: rgb(241 245 249);
+}
+
+.bg-transparent {
+  background-color: transparent;
+}
+
+.backdrop {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.text-gray-500 {
+  color: rgb(107 114 128);
+}
+
+.border-gray-400 {
+  border-color: rgb(156 163 175);
+}
+
+.border-b-amber-700 {
+  border-bottom: solid;
+  border-bottom-color: rgb(180 83 9);
+}
+
+.rounded-md {
+  border-radius: 0.375rem; /* 6px */
+}
+
+.rounded-lg {
+  border-radius: 0.5rem; /* 8px */
+}
+.border-spacin-0 {
+}
+.border {
+  border-style: solid;
+}
+
+.border-b-2 {
+  border-bottom: solid;
+}
+
+.border-b {
+  border-bottom: solid;
+  border-width: 1px;
+}
+
+.border-none {
+  border-style: none;
+}
+
+.h-screen {
+  height: 100vh;
+}
+
+.hover\:brightness-95:hover {
+  filter: brightness(0.8);
+}
+
+.hover\:text-red-600:hover {
+  color: rgb(220 38 38);
+}
+
+.overflow-y-hidden {
+  overscroll-behavior: none;
+}
+
+.overflow-y-auto {
+  overflow-y: auto;
+}
+
+.font-semibold {
+  font-weight: 600;
+}
+
+.fixed {
+  position: fixed;
+}
+
+.absolute {
 }
 
 .inset-0 {
-    inset: 0px;
+  inset: 0px;
 }
 
 .w-full {
-    width: 100%;
+  width: 100%;
 }
 
 .max-w-xl {
-    max-width: 36rem; /* 576px */;
+  max-width: 36rem; /* 576px */
+}
+
+.max-w-6xl {
+  max-width: 72rem; /* 1152px */
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.z-50 {
+  z-index: 50;
+}
+
+.z-10 {
+  z-index: 10;
+}
+
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
